--- a/Projects/Loopstudios Website/input.css
+++ b/Projects/Loopstudios Website/input.css
@@ -4,21 +4,18 @@
 
 @layer base {
 	h5 {
-		@apply absolute px-6 duration-200 w-52 bottom-4 md:bottom-8
-    md:px-10 group-hover:scale-110 group-hover:text-black;
+		@apply absolute px-6 duration-200 w-52 bottom-4 md:bottom-8 md:px-10 group-hover:scale-110 group-hover:text-black;
 	}
 }
 
 @layer components {
 	.btn {
-		@apply px-10 py-2 my-0 font-bold tracking-widest uppercase border-2
-    border-black font-alata hover:bg-black hover:text-white;
+		@apply px-10 py-2 my-0 font-bold tracking-widest uppercase border-2 border-black font-alata hover:bg-black hover:text-white;
 	}
 }
 
 .item-container {
-	@apply flex flex-col justify-between w-full space-y-6 text-2xl
-  text-white uppercase md:flex-row md:space-y-0 md:space-x-8;
+	@apply flex flex-col justify-between w-full space-y-6 text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-8;
 }
 
 .item {
@@ -26,9 +23,7 @@
 }
 
 .item-gradient {
-	@apply absolute top-0 bottom-0 right-0 left-0 bg-gradient-to-b 
-  from-transparent to-gray-900 group-hover:from-gray-50 
-  group-hover:to-white group-hover:opacity-70;
+	@apply absolute top-0 bottom-0 right-0 left-0 bg-gradient-to-b from-transparent to-gray-900 group-hover:from-gray-50 group-hover:to-white group-hover:opacity-70;
 }
 
 #hero {
@@ -61,7 +56,7 @@
 	height: 2px;
 	top: 0;
 	left: 0;
-	background: white;
+	background: #fff;
 	transform: rotate(0);
 	transition: all 0.5s;
 }
