--- a/Projects/Fylo Website With Color Picker/css/style.css
+++ b/Projects/Fylo Website With Color Picker/css/style.css
@@ -527,6 +527,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2.5rem;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
